# CrewAI

./: .gitignore  IMPLEMENTATION_SUMMARY.md  ML_ENVIRONMENT_SETUP.md  README.md  main.py  predict_classification.py  predict_yolo.py  requirements.txt  setup_ml_env.ps1  ssh_keys.pub  template.py
ai_travel_agent/: pyproject.toml
ai_travel_agent/output/: trip_plan.md
ai_travel_agent/src/: run_crew.py
ai_travel_agent/src/ai_travel_agent/: crew.py
ai_travel_agent/src/ai_travel_agent/config/: agents.yaml  tasks.yaml
config_params/: config.yml
ml_env/: pyvenv.cfg
ml_env/Scripts/: activate  activate.bat
model_training_artifacts/: class_names.json  evaluation_results.json  training_history.json
model_training_artifacts/logs/train/: events.out.tfevents.1760644838.AYUSHSURFPRO95.17628.0.v2  events.out.tfevents.1760645044.AYUSHSURFPRO95.25484.0.v2
model_training_artifacts/logs/validation/: events.out.tfevents.1760646556.AYUSHSURFPRO95.25484.1.v2
precision_agronomist/: ADVANCED_FEATURES_GUIDE.md  AMP_DEPLOYMENT_GUIDE.md  AMP_READY_SUMMARY.md  COMPETITION_READY_SUMMARY.md  CREWAI_AMP_DEPLOYMENT.md  Dockerfile  FILE_STRUCTURE.md  FIX_DEPENDENCIES.txt  FRONTEND_EXAMPLE.html  PYDANTIC_FIXES_SUMMARY.md  QUICKSTART.md  QUICK_START_ADVANCED.md  README.md  USAGE_GUIDE.md  amp.yaml  app.py  crewai.yaml  deploy_amp.ps1  docker-compose.yml  plant_disease_report.md  pyproject.toml  render.yaml  report.md  requirements.txt  setup.py  setup_translation.ps1  test_amp_api.py
precision_agronomist/precision_agronomist/: disease_tracking.db
precision_agronomist/src/plant_detection/: __init__.py  crew.py  main.py
precision_agronomist/src/precision_agronomist/: crew.py  main.py
precision_agronomist/src/precision_agronomist/config/: agents.yaml  tasks.yaml
precision_agronomist/src/precision_agronomist/tools/: __init__.py  chatbot_tool.py  database_storage_tool.py  email_alert_tool.py  image_classifier_tool.py  image_loader_tool.py  model_downloader_tool.py  translation_tool.py  trend_analysis_tool.py  yolo_detector_tool.py
reseach/: trials.ipynb
runs/mlflow/0/: meta.yaml
runs/mlflow/410434320674701082/: meta.yaml
runs/mlflow/410434320674701082/27caad88875d4458af3a27a6d97abeeb/: meta.yaml
runs/mlflow/410434320674701082/27caad88875d4458af3a27a6d97abeeb/metrics/lr/: pg0
runs/mlflow/410434320674701082/27caad88875d4458af3a27a6d97abeeb/params/: name  project  save_dir
src/plant_detection/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py  object_detection.py
src/plant_detection/config/: configuration.py
src/plant_detection/constants/: __init__.py
src/plant_detection/entity/: config_entity.py
src/plant_detection/pipeline/: data_transformation_stage.py  data_validation_stage.py  model_training_stage.py  object_detection_stage.py
src/plant_detection/utils/: main_utils.py
(+11 files in other folders)
