[project]
name = "precision_agronomist"
version = "0.1.0"
description = "precision_agronomist using crewAI for plant disease detection"
authors = [{ name = "Ayush Yajnik", email = "ayushyajnik1@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "gdown>=4.7.0",
    "pillow>=10.0.0"
]


[project.scripts]
precision_agronomist = "precision_agronomist.main:run"
run_crew = "precision_agronomist.main:run"
train = "precision_agronomist.main:train"
replay = "precision_agronomist.main:replay"
test = "precision_agronomist.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
