[project]
name = "precision-agronomist"
version = "0.1.0"
description = "AI-powered plant disease detection system using CrewAI"
authors = [{ name = "Ayush Yajnik", email = "ayushyajnik1@outlook.com" }]
requires-python = ">=3.10"
dependencies = [
    "crewai[tools]>=0.203.0,<1.0.0",
    "pandas>=2.2.0,<3.0.0",
    "numpy>=1.26.0,<2.0.0",
    "gdown>=4.7.0",
    "pillow>=10.0.0",
    "deep-translator>=1.11.4",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
precision_agronomist = "precision_agronomist.main:run"
run_crew = "precision_agronomist.main:run"
train = "precision_agronomist.main:train"
replay = "precision_agronomist.main:replay"
test = "precision_agronomist.main:test"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.crewai]
type = "crew"